--- a/api/package.json
+++ b/api/package.json
@@ -1,1 +1,12 @@
 
+{
+  "name": "inj-portfolio",
+  "private": true,
+  "type": "module",
+  "dependencies": {
+    "@vercel/blob": "^0.27.0"
+  },
+  "scripts": {
+    "build": "echo \"no build\""
+  }
+}
